@@ -11,20 +11,16 @@ import org.springframework.http.HttpHeaders;
 import org.springframework.security.authentication.AnonymousAuthenticationToken;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
-import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
+import org.springframework.util.AntPathMatcher;
 import org.springframework.web.filter.OncePerRequestFilter;
+
 import java.io.IOException;
 import java.util.*;
 import java.util.stream.Collectors;
-import org.springframework.security.authentication.AnonymousAuthenticationToken;
-import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
-
-import java.io.IOException;
-import java.util.List;
 
 @Component
 public class JwtAuthFilter extends OncePerRequestFilter {
@@ -41,10 +37,9 @@ public class JwtAuthFilter extends OncePerRequestFilter {
     @Override
     protected boolean shouldNotFilter(HttpServletRequest request) {
         final String uri = request.getRequestURI();
-        final String method = request.getMethod();
+        if ("OPTIONS".equalsIgnoreCase(request.getMethod())) return true; // preflight
 
         AntPathMatcher m = new AntPathMatcher();
-
         String[] skip = {
             "/auth/oidc/start",
             "/auth/oidc/callback",
@@ -81,7 +76,7 @@ public class JwtAuthFilter extends OncePerRequestFilter {
 
     @Override
     protected void doFilterInternal(HttpServletRequest req, HttpServletResponse res, FilterChain chain)
-        throws ServletException, IOException {
+            throws ServletException, IOException {
 
         // 이미 인증되어 있으면 그대로 통과(기존 동작 유지)
         Authentication existing = SecurityContextHolder.getContext().getAuthentication();
@@ -107,20 +102,18 @@ public class JwtAuthFilter extends OncePerRequestFilter {
             jwtUtil.validateAccess(token);
             String userId = jwtUtil.getUserIdFromAccess(token);
 
+            // roles(optional) → 권한 매핑
+//            Collection<SimpleGrantedAuthority> authorities = extractAuthorities(token);
 
-            // 🎯 기본 ROLE_USER 권한 부여
-            List<GrantedAuthority> authorities = List.of(
-                new SimpleGrantedAuthority("ROLE_USER")
-            );
-
-            var auth = new UsernamePasswordAuthenticationToken(userId, null, authorities);
-            auth.setDetails(new WebAuthenticationDetailsSource().buildDetails(req));
+            // 3) SecurityContext 세팅(기존 목적 유지)
+            var authorities = Collections.<SimpleGrantedAuthority>emptyList();
+// 또는 Collections.emptyList() 도 가능 (권한 검사는 안 하니까)
 
             UsernamePasswordAuthenticationToken auth =
                     new UsernamePasswordAuthenticationToken(userId, null,authorities);
             auth.setDetails(new WebAuthenticationDetailsSource().buildDetails(req));
             SecurityContextHolder.getContext().setAuthentication(auth);
-            // 컨트롤러에서 헤더 없이도 userId를 사용할 수 있도록 attribute 세팅(요청 범위)
+            // 4) 컨트롤러에서 헤더 없이도 userId를 사용할 수 있도록 attribute 세팅(요청 범위)
             req.setAttribute(USER_ID_ATTR, userId);
 
             chain.doFilter(req, res);
@@ -135,7 +128,6 @@ public class JwtAuthFilter extends OncePerRequestFilter {
             res.getWriter().write("{\"error\":\"unauthorized\",\"message\":\"Invalid or expired token\"}");
         }
     }
-
 
     /** Authorization 헤더 → access 쿠키 → (개발용) accessToken 쿼리파라미터 순으로 토큰을 추출 */
     private String extractAccessToken(HttpServletRequest req) {
@@ -184,5 +176,4 @@ public class JwtAuthFilter extends OncePerRequestFilter {
 //                .map(r -> new SimpleGrantedAuthority("ROLE_" + r))
 //                .collect(Collectors.toList());
 //    }
-
 }
